Coding paged-table example.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <h2><a routerLink="/dialog">Dialog</a></h2>
   </li>
   <li>
-    <h2><a>Component 2</a></h2>
+    <h2><a routerLink="/paged-table">Paged Table</a></h2>
   </li>
   <li>
     <h2><a>Component 3</a></h2>
